Fix #primary element top-margin on small devices

--- a/wp-content/themes/distylight/assets/css/_layout.sass
+++ b/wp-content/themes/distylight/assets/css/_layout.sass
@@ -126,7 +126,7 @@ header.navigation
       margin-top: 1em
 
   #primary
-    padding-top: 7em
+    padding-top: 3em
 
 @media screen and (max-width: 767px)
   header.navigation
